Changes made by Iliya Rachev (rachev.id@gmail.com).

--- a/sky-trails/views/location.html
+++ b/sky-trails/views/location.html
@@ -14,6 +14,7 @@
             <input id="map-address" type="search" data-bind="value: address" placeholder="Address"/>
             <input id="map-search" type="submit" value="" data-bind="click: onSearchAddress" />
         </form>
+        <span id="location-town"></span>
     </div>
     <div id="map-canvas"></div>
 
