--- a/sky-trails/views/login.html
+++ b/sky-trails/views/login.html
@@ -26,9 +26,9 @@
             </li>
         </ul>
 
-        <div class="buttonArea">
-            <a id="login" data-role="button" data-bind="click: onLogin, invisible: isLoggedIn" class="login-button">Login</a>
-            <a id="logout" data-role="button" data-bind="click: onLogout, visible: isLoggedIn" class="login-button">Logout</a>
+        <div class="action-area">
+            <a id="login" data-role="button" data-bind="click: onLogin, invisible: isLoggedIn" class="large-button">Login</a>
+            <a id="logout" data-role="button" data-bind="click: onLogout, visible: isLoggedIn" class="large-button">Logout</a>
         </div>
     </div>
 
