Changes made by Iliya Rachev (rachev.id@gmail.com).

--- a/sky-trails/views/camera.html
+++ b/sky-trails/views/camera.html
@@ -17,7 +17,8 @@
             <div class="dark"></div>
             <div class="light"></div>
         </div>
-        
-        <a data-role="button" class="button large-button" data-bind="click: app.camera.addImage">Save Picture To Database</a>
+    </div>
+    <div data-bind="app.camera.addImage" class="action-area">
+        <a data-role="button" class="button large-button" data-bind="click: saveItem">Save Picture To Database</a>
     </div>
 </div>
